perdiendo el tiempo en Semana Santa22

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="icons/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/website.css">
+    <link rel="stylesheet" href="./bulma/css/estilos.css">
   </head>
   <body>
     <nav class="navbar has-shadow">
@@ -68,8 +69,8 @@
     </nav>
 
     <section class="section">
-      <div class="columns">
-        <div class="column is-4-tablet is-3-desktop is-2-widescreen">
+      <div class="columns">   <!-- bloque ppal de columnas de de la pagina -->
+        <div class="column is-4-tablet is-3-desktop is-2-widescreen"> <!-- columna del menu de la izqda. -->
           <nav class="menu">
             <p class="menu-label">
               Menu
@@ -111,14 +112,14 @@
           </nav>
         </div>
 
-        <div class="column">
-          <div class="level">
-            <div class="level-left">
+        <div class="column">  <!-- columna del cuerpo de la pagina, en el centro y dcha. -->
+          <div class="level">   <!-- dentro de la columna del cuerpo, para diferenciar izqda. y dcha. -->
+            <div class="level-left">    <!-- dentro de la columna del cuerpo, la parte izqda. -->
               <h1 class="subtitle is-3">
                 <span class="has-text-grey-light">Hello</span> <strong>Alex Johnson</strong>
               </h1>
             </div>
-            <div class="level-right">
+            <div class="level-right">   <!-- dentro de la columna del cuerpo, la parte derecha. -->
               <div class="select">
                 <select>
                   <option>Today</option>
@@ -132,29 +133,29 @@
             </div>
           </div>
 
-          <div class="columns is-multiline">
-            <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+          <div class="columns is-multiline"> <!-- dentro de la columna del cuerpo, New bloq de columnas para el main del cuerpo -->
+            <div class="column is-12-tablet is-6-desktop is-3-widescreen">  <!-- En el main del cuerpo, caja 1/4 izqda. -->
               <div class="notification is-link has-text">
                 <p class="title is-1">232</p>
                 <p class="subtitle is-4">Orders</p>
               </div>
             </div>
 
-            <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="column is-12-tablet is-6-desktop is-3-widescreen">  <!-- En el main del cuerpo, caja 2/4 izqda. -->
               <div class="notification is-info has-text">
                 <p class="title is-1">$7,648</p>
                 <p class="subtitle is-4">Revenue</p>
               </div>
             </div>
 
-            <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="column is-12-tablet is-6-desktop is-3-widescreen">  <!-- En el main del cuerpo, caja 3/4 dcha. -->
               <div class="notification is-primary has-text">
                 <p class="title is-1">1,678</p>
                 <p class="subtitle is-4">Visitors</p>
               </div>
             </div>
 
-            <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="column is-12-tablet is-6-desktop is-3-widescreen">  <!-- En el main del cuerpo, caja 4/4 dcha. -->
               <div class="notification is-success has-text">
                 <p class="title is-1">20,756</p>
                 <p class="subtitle is-4">Pageviews</p>
